fix: Apply bslib-page-dashboard bg correctly on mobile
Need to set `--_main-bg` at the layout container and reset `background-color` rather than `--_main-bg` at the `.main` level

--- a/inst/builtin/bs5/shiny/_rules.scss
+++ b/inst/builtin/bs5/shiny/_rules.scss
@@ -158,12 +158,14 @@ $bslib-checkbox-radio-margin-right: 0.35em !default;
   }
 
   // Set the background color of page dashboard class...
-  .bslib-page-dashboard,
-  // or of global main content area in a page_navbar() with a global sidebar
-  .bslib-sidebar-layout:has(.tab-content > .bslib-page-dashboard.active) {
-    background-color: var(--bslib-dashboard-main-bg);
-    // or of main area of a page_sidebar()
-    --_main-bg: var(--bslib-dashboard-main-bg);
+  .bslib-sidebar-layout {
+    &:has(> .bslib-page-dashboard),
+    // or of global main content area in a page_navbar() with a global sidebar
+    &:has(.tab-content > .bslib-page-dashboard.active) {
+      background-color: var(--bslib-dashboard-main-bg);
+      // or of main area of a page_sidebar()
+      --_main-bg: var(--bslib-dashboard-main-bg);;
+    }
   }
 
   .bslib-page-navbar, .bslib-page-dashboard {
